@@ -2,6 +2,7 @@
 	- Fixup LDFLAGS from libevent sourcedir compile configure restore.
 	- Fixup so no non-absolute rpaths are added.
 	- Fixup validation of RRSIG queries, they are let through.
+	- read /dev/random before chroot
 
 27 March 2009: Wouter
 	- nicer -h output. report linked libraries and modules.
